--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: "Niklas Buschmann"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
-minimal: false
+show_frame: true
 mathjax: true
 
 navigation:
