--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Niklas Buschmann"
-author: "Niklas Buschmann"
+title: "Irancell Security"
+author: "Irancell Security"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
